--- a/mysite/src/App.css
+++ b/mysite/src/App.css
@@ -37,7 +37,15 @@ h3{
 
 }
 .banner-btn{
-    background-color: aqua;
+    margin-top: 20px;
+    margin-left: 200px;
+    text-decoration: none;
+    font-size:20px;
+    border-radius: 4px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 10px 20px;
+    background-color:rgba(255, 166, 0, 0.699);
+    cursor: pointer;
 }
 .span2{
     font-weight: 600;
@@ -48,7 +56,7 @@ h3{
 
 }
 li a:hover{
-    color: blueviolet;
+    color: rgb(34, 8, 58);
 }
 li a{
     text-decoration: none;
@@ -66,11 +74,13 @@ li a{
    font-size:40px;
 
 }
-.banner{
-    margin-top: 40px;
+
+
+.background{
+    /* margin-top: 40px; */
     /* padding-top: 10%; */
     background-size: cover;
-    height: 450px;
+    height: 570px;
     width: 100%;
     background-image: url('https://www.autofarmindia.com/wp-content/uploads/2021/08/traditional-farming.png');
 }
